	* FIXED: Bug in InstanceGenerator to allow creating instances of abstract classes (issue #38)
	* FIXED: Ant/JUnit integration, annotation configuration was not correctly configured and the xml for the JUnit reports was missing (from patch from ManuelB) (issue #49-51)
	* FIXED: Infinite loops in bi-directional cascades (issue #57)
	* REMOVED: Global flag in EmpireOptions for handling proxying, this is now completely controlled via JPA annotations (issue #32)

Empire 0.6.6 (2010-07-08)
=========================
    * MODIFIED: Updates in 4Store & OpenRDF utility libraries to resolve issue regarding escaping quotes in queries.
    * MODIFIED: Better sniffing for XML formatted configuration files in DefaultEmpireModule
	* ADDED: Support for MappedSuperclass
	* ADDED: Build flag for enabling debug in jar files
	* ADDED: Targets for producing separate builds for each platform (Jena, Sesame, 4Store, etc.)
	* REMOVED: Global option to inspect bean hierarchy, this is now controlled by @MappedSuperclass
    * FIXED: Bug in query parameter handling introduced in 0.6.5, optional parameters could produce invalid queries in certain cases.
    * FIXED: Bug in Empire initialization.  Static code in RdfGenerator was not getting executed to init its state in some cases.
    * MODIFIED: Updates in 4Store & OpenRDF utility libraries to resolve issue regarding escaping quotes in queries. 

Empire 0.6.5 (2010-06-04)
=========================
	* MODIFIED: Behavior of a missing annotation index changed from error to warning.
	* MODIFIED: Refactor of persistence API to include a method for creating a DataSource independent of an EntityManager
	* MODIFIED: Query API clean-ups
		* Limit & Offset are extracted from static query strings and used on the Query object
		* Fix to detection of the type of query being executed
		* Relaxing constraint that all variables in the parameterized query must be bound, any vars not bound are left as normal query variables.